--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -18,6 +18,25 @@
             width: 100%;
             height: 100%;
         }
+        .ui {
+            border-radius: 5px;
+        }
+        .speedControls {
+            background-color: rgba(255, 255, 255, 0.233);
+            padding: 5px;
+            margin: 10px;
+            bottom: 0px;
+            right: 0px;
+            position: absolute;
+        }
+        .speedControls .smallButton {
+            width: 50px;
+        }
+        .smallButton {
+            background-color: rgb(255, 0, 0);
+            border: 0px;
+            margin: 5px;
+        }
     </style>
     <script src="./Renderer.js"></script>
 </head>
